Реализация аунтефикации при помощи Jwt токенов

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "0i7uyk6jtGHJUIOPPLOKIJHGhtgrfvgbilopGH",
+    "Issuer": "https://localhost:7198/",
+    "Audience":  "https://localhost:7198/"
+  }
 }
